@@ -5,6 +5,7 @@ v1.5.6 (WIP)
 - Add CheckBox.SetCursorRune (cursors are now shown within CheckBoxes when focused by default)
 - Add DropDown.SetAlwaysDrawDropDownSymbol (DropDown symbols are now shown only when focused by default)
 - Add DropDown.SetDropDownOpenSymbolRune
+- Fix TextView always visible scroll bar not appearing when empty
 - Draw additional accents when rendering a list divider
 - Update Application.Draw and Application.QueueUpdateDraw to accept one or more
 primitives to draw instead of the whole screen
